--- a/koha-tmpl/intranet-tmpl/default/en/parameters/letter.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/letter.tmpl
@@ -22,7 +22,7 @@
 				<td><!-- TMPL_VAR NAME="code" --></td>
 				<td><!-- TMPL_VAR NAME="name" --></td>
 				<td>
-					<a href="/cgi-bin/koha/admin/letter.pl?op=add_form&amp;code=<!-- TMPL_VAR NAME="code" -->">
+					<a href="/cgi-bin/koha/admin/letter.pl?op=add_form&amp;module=<!-- TMPL_VAR name="module" -->&amp;code=<!-- TMPL_VAR NAME="code" -->">
 						<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png"  width="32" hspace="0" vspace="0" border="0">
 					</a>
 				</td>
