--- a/koha-tmpl/intranet-tmpl/default/en/bull/serial-issues.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/bull/serial-issues.tmpl
@@ -1,12 +1,15 @@
-<!-- TMPL_INCLUDE NAME="cat-top.inc" -->
+<!-- TMPL_INCLUDE NAME="bull-top.inc" -->
 <!--------------------------MAIN BODY OF PAGE-------------------------->
 <div id="mainbloc">
-<h1 class="catalogue">Issues for a subscription</h1>
-<a href="/cgi-bin/koha/MARCdetail.pl?bib=<!-- TMPL_VAR name="biblionumber" -->" class="button catalogue">Biblio</a>
-<form method="post" name="f">
-<div id="bloc25">
-	<h2 class="catalogue">Subscription information</h2>
-		<p>For <b><!-- TMPL_VAR name="bibliotitle" --></b> that began on <b><!-- TMPL_VAR name="startdate" --></b> and is issued every
+	<h1 class="bull">Issues for a subscription</h1>
+	<a href="/cgi-bin/koha/bull-home.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button bull">Back to subscriptions</a>
+	<a href="/cgi-bin/koha/MARCdetail.pl?bib=<!-- TMPL_VAR name="biblionumber" -->" class="button bull">Back to biblio</a>
+	<a class="button bull" href="serial-issues.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->&selectview=full">Complete view</a>
+
+	<!-- TMPL_LOOP name="subscription_LOOP" -->
+	<div id="bloc25">
+		<h2 class="bull">Subscription information for <!-- TMPL_VAR name="bibliotitle" --></h2>
+		<p>It began on <b><!-- TMPL_VAR name="histstartdate" --></b> and is issued every
 		<b>
 		<!--TMPL_IF name="periodicity1" -->
 				day
@@ -24,10 +27,10 @@
 				month
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="periodicity6" -->
-				2 monthes
+				2 months
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="periodicity7" -->
-				3 Monthes
+				3 months
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="periodicity8" -->
 				quarter
@@ -42,46 +45,58 @@
 				2 years
 		<!-- /TMPL_IF -->
 		</b>
-		on
-		<b>
 		<!--TMPL_IF name="arrival1" -->
-			Monday
+			on <b>monday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival2" -->
-				Tuesday
+			on <b>tuesday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival3" -->
-				Wednesday
+			on <b>wednesday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival4" -->
-				Thursday
+			on <b>thursday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival5" -->
-				Friday
+			on <b>friday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival6" -->
-				Saturday
+			on <b>saturday</b>
 		<!-- /TMPL_IF -->
 		<!--TMPL_IF name="arrival7" -->
-				Sunday
+			on <b>sunday</b>
 		<!-- /TMPL_IF -->
-		</b>
-		</p>
-		<p>(subscription for 
+		for <b>
 			<!-- TMPL_IF name="numberlength" --><!-- TMPL_VAR name="numberlength" --> issues<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="weeklength" --><!-- TMPL_VAR name="weeklength" --> weeks<!-- /TMPL_IF -->
 			<!-- TMPL_IF name="monthlength" --><!-- TMPL_VAR name="monthlength" --> months<!-- /TMPL_IF -->
-			)
+			</b>
 		</p>
+		<p>Last renewal of subscription was <b><!-- TMPl_VAR name="startdate" --></b></p>
+		<!-- TMPL_IF name="enddate" --><p><b>This subscription is now ended. The last issue was recieved on <!-- TMPL_VAR name="enddate" --></b></p><!-- /TMPL_IF name="enddate" -->
+	<!--TMPL_UNLESS Name=fullinfo -->
 		<p><!-- TMPL_VAR name="notes" --></p>
-</div>
-<div id="bloc25">
-	<h2 class="catalogue">Issues summary</h2>
-	<p>
-		<!-- TMPL_VAR name="librariannote" -->
-	</p>
-</div>
-
+		<!-- TMPL_IF name="opacnote" -->
+			<h3 class="bull">Issues summary</h2>
+			<p>
+				<!-- TMPL_VAR name="opacnote" -->
+			</p>
+		<!-- /TMPL_IF -->
+		<!-- TMPL_IF name="recievedlist" -->
+			<h3 class="bull">Recieved issues</h2>
+			<p>
+				<!-- TMPL_VAR name="recievedlist" -->
+			</p>
+		<!-- /TMPL_IF -->
+		<!-- TMPL_IF name="missinglist" -->
+			<h3 class="bull">Missing issues</h2>
+			<p>
+				<!-- TMPL_VAR name="missinglist" -->
+			</p>
+		<!-- /TMPL_IF -->
+	</div>
+	<!-- /TMPL_UNLESS -->
+<!-- /TMPL_LOOP -->
 </div>
 
 <!-- TMPL_INCLUDE NAME="bull-bottom.inc" -->
