--- a/koha-tmpl/intranet-tmpl/default/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/catalogue/detail.tmpl
@@ -53,40 +53,72 @@
 		<tr>
 			<td>
 				<!-- TMPL_IF name="subtitles" -->
-					<label class="label100"><b>Subtitle(s):</b> </label>
+					<p><label class="label100"><b>Subtitle(s):</b> </label>
 					<!-- TMPL_LOOP name="subtitles" -->
 						<!-- TMPL_VAR NAME="subtitle" --> ; 
 					<!-- /TMPL_LOOP -->
-					<br />
+					</p>
 				<!-- /TMPL_IF -->
-				<!-- TMPL_IF name="author" --><label class="label100"><b>Author:</b> </label><!-- TMPL_VAR NAME="author" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="additional" --><label class="label100"><b>Additional Author:</b></label><!-- TMPL_VAR NAME="additional" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="publishercode" --><label class="label100"><b>Published by :</b></label><!-- /TMPL_IF --> <!-- TMPL_VAR NAME="publishercode" --><br />
-				<!-- TMPL_IF name="publicationyear" --><label class="label100"><b>in </b></label><!-- /TMPL_IF --><!-- TMPL_VAR NAME="publicationyear" -->
-				<!-- TMPL_IF name="pages" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="pages" -->
-				<!-- TMPL_IF name="size" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="size" --><br />
-				<!-- TMPL_IF name="isbn" --><label class="label100"><b>ISBN:</b> </label><!-- TMPL_VAR NAME="isbn" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="issn" --><label class="label100"><b>ISSN:</b> </label><!-- TMPL_VAR NAME="issn" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="seriestitle" --><label class="label100"><b>Collection:</b> </label><!-- TMPL_VAR NAME="seriestitle" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="subjects" --><label class="label100"><b>Subject(s):</b> </label>
-					<!-- TMPL_LOOP name="subjects" -->
-						<a href="/cgi-bin/koha/search.pl?type=intra&subjectitems=<!-- TMPL_VAR NAME="subject" escape="HTML"-->"><!-- TMPL_VAR NAME="subject" --></a>, <!-- /TMPL_LOOP -->
-					<br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="copyrightdate" --><label class="label100"><b>Year :</b> </label><!-- TMPL_VAR NAME="copyrightdate" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="notes" --><label class="label100"><b>Notes:</b> </label><!-- TMPL_VAR NAME="notes" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="unititle" --><label class="label100"><b>Alt title:</b> </label><!-- TMPL_VAR NAME="unititle" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="dewey" --><label class="label100"><b>Dewey:</b></label><!-- TMPL_VAR name="dewey" --><br /><!-- /TMPL_IF -->
-				<!-- TMPL_IF name="url" --><label class="label100"><b>URL:</b> </label><a href="<!-- TMPL_VAR name="url" -->"><!-- TMPL_VAR NAME="url" --></a><br /><!-- /TMPL_IF -->
-				<label class="label100"><b>Item type : </b></label>
+				<!-- TMPL_IF name="author" --><p><label class="label100"><b>Author:</b> </label><!-- TMPL_VAR NAME="author" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="additional" --><p><label class="label100"><b>Additional Author:</b></label><!-- TMPL_VAR NAME="additional" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="illus" --><p><label class="label100"><b>Illus:</b></label><!-- TMPL_VAR name="illus" --></p><!-- /TMPL_IF -->
+				<p>
+					<!-- TMPL_IF name="publishercode" --><label class="label100"><b>Published by :</b></label><!-- /TMPL_IF --> <!-- TMPL_VAR NAME="publishercode" -->
+				</p>
+				<!-- TMPL_IF name="publicationyear" --><p><label class="label100"><b>in </b></label><!-- TMPL_VAR NAME="publicationyear" --></p><!-- /TMPL_IF -->
+				<p>
+					<label class="label100">&nbsp;</label><!-- TMPL_IF name="pages" --> <!-- /TMPL_IF --><!-- TMPL_VAR name="pages" -->
+					<!-- TMPL_IF name="size" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="size" -->
+				</p>
+				<!-- TMPL_IF name="isbn" --><p><label class="label100"><b>ISBN:</b> </label><!-- TMPL_VAR NAME="isbn" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="issn" --><p><label class="label100"><b>ISSN:</b> </label><!-- TMPL_VAR NAME="issn" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="seriestitle" --><p><label class="label100"><b>Collection:</b> </label><!-- TMPL_VAR NAME="seriestitle" --> <!-- TMPL_IF name="volume" -->vol. <!-- TMPL_VAR name="volume" --> <!-- TMPL_VAR name="volumedate" --><!-- /TMPL_IF --><!-- TMPL_VAR name="volumedesc" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="MARCSUBJCTS" -->
+					<p><label class="label100"><b>Subjects:</b></label></p>
+					<p>
+						<!-- TMPL_LOOP NAME="MARCSUBJCTS" -->
+							<label class="label100">-</label><a href="/cgi-bin/koha/opac-searchresults.pl?subjectitems=<!-- TMPL_VAR NAME="marcsubjct" ESCAPE="URL"-->">
+								<!-- TMPL_VAR NAME="marcsubjct" -->
+							</a><br>
+						<!-- /TMPL_LOOP -->
+					</p>
+				<!-- TMPL_ELSE -->
+					<!-- TMPL_IF name="subjects" --><p><label class="label100"><b>Subject(s):</b> </label></p>
+						<!-- TMPL_LOOP name="subjects" -->
+							<p><a href="/cgi-bin/koha/opac-search.pl?op=do_search&marclist=bibliosubject.subject&and_or=and&operator==&value=<!-- TMPL_VAR NAME="subject" escape="HTML"-->"><!-- TMPL_VAR NAME="subject" --></a>, </p> <!-- /TMPL_LOOP -->
+					<!-- /TMPL_IF -->
+				<!-- /TMPL_IF -->
+				<!-- TMPL_IF name="copyrightdate" --><p><label class="label100"><b>Year :</b> </label><!-- TMPL_VAR NAME="copyrightdate" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="MARCNOTES" -->
+					<p><label class="label100"><b>Notes:</b> </label></p>
+					<p>
+						<!-- TMPL_LOOP NAME="MARCNOTES" -->
+							<p>- <!-- TMPL_VAR NAME="marcnote" --></p>
+						<!-- /TMPL_LOOP -->
+					</p>
+				<!-- TMPL_ELSE -->
+					<!-- TMPL_IF name="notes" --><p><label class="label100"><b>Notes:</b> </label><!-- TMPL_VAR NAME="notes" --></p><!-- /TMPL_IF -->
+				<!-- /TMPL_IF -->
+				<!-- TMPL_IF name="unititle" --><p><label class="label100"><b>Alt title:</b> </label><!-- TMPL_VAR NAME="unititle" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="classification" --><p><label class="label100"><b>classification:</b></label><!-- TMPL_VAR name="subclass" --><!-- TMPL_VAR name="classification" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="dewey" --><p><label class="label100"><b>Dewey:</b></label><!-- TMPL_VAR name="dewey" --></p><!-- /TMPL_IF -->
+				<!-- TMPL_IF name="URLS" -->
+					<p><label class="label100"><b>URL:</b> </label>
+						<!-- TMPL_LOOP name="URLS" -->
+							<a href="<!-- TMPL_VAR name="url" -->"><!-- TMPL_VAR NAME="url" --></a>&nbsp;
+						<!-- /TMPL_LOOP -->
+					</p>
+				<!-- /TMPL_IF -->
+				<p><label class="label100"><b>Item type : </b></label>
 					<!-- TMPL_IF name="description" -->
 						<!-- TMPL_VAR name="description" -->
 					<!-- TMPL_ELSE -->
 						<!-- TMPL_VAR NAME="itemtype" -->
 					<!-- /TMPL_IF -->
-					<br/>
-					<!-- TMPL_IF name="count" -->
-						<p><b>Total Number of Items:</b> <!-- TMPL_VAR NAME="count" --></p>
-					<!-- /TMPL_IF -->
+				</p>
+				<!-- TMPL_IF name="count" -->
+					<p><b>Total Number of Items:</b> <!-- TMPL_VAR NAME="count" --></p>
+				<!-- /TMPL_IF -->
 			</td>
 		</tr>
 	</table>
@@ -126,23 +158,17 @@
 				<!-- /TMPL_IF -->
 			</tr>
 		<!-- /TMPL_LOOP -->
-		<!-- TMPL_LOOP NAME="WEB_RESULTS" -->
-			<tr>
-				<td><!-- TMPL_VAR NAME="itemtype" --></td>
-				<td>Website</td>
-				<td>Online</td>
-				<td>Available</td>
-				<td></td>
-				<td>
-					<a href="/cgi-bin/koha/moredetail.pl?item=<!-- TMPL_VAR NAME="itemnumber -->&amp;bib=<!-- TMPL_VAR NAME="biblionumber" -->&amp;bi=<!-- TMPL_VAR NAME="biblioitemnumber" -->">http://<!-- TMPL_VAR NAME="url" --></a>
-				</td>
-			</tr>
-		<!-- /TMPL_LOOP -->
 	</table>
 </div>
 <script language="javascript" type="text/javascript">
 function Dopop(link) {
 	newin=window.open(link,'width=500,height=400,toolbar=false,scrollbars=yes');
+}
+function confirm_deletion() {
+	var is_confirmed = confirm('Are you sure you want to delete this biblio?');
+	if (is_confirmed) {
+		window.location="acqui.simple/addbiblio.pl?op=delete&amp;bibid=<!-- TMPL_VAR NAME="bibid" -->";
+	}
 }
 </script>
 
