--- a/koha-tmpl/intranet-tmpl/default/en/help/bull/subscription-add.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/help/bull/subscription-add.tmpl
@@ -2,7 +2,12 @@
 	<h1>Serials subscription add & modify help</h1>
 	<ul>
 		<h2>Subscription information bloc</h2>
-		<p>it contains the name of the librarian that created the subscription, the name of the supplier providing the subscription, the cost and the budget affected. It also contains the title of the biblio managed by the subscription.</p>
+		<p>It contains :</p>
+		<ul>
+			<li>The name of the librarian that created the subscription, and the name of the supplier providing the subscription.</li>
+			<li>The title of the biblio managed by the subscription.</li>
+			<li>The name of the letter for issue alert. Letters are defined in parameters section. If you choose one, then every identified borrower will be able to subscribe to "issue alert" for this subscription : every time you issue something, he will recieve the "letter" as mail</li>
+		</ul>
 		<h2>Planning information bloc</h2>
 		<p>it contains various information to calculate arrival dates.</p>
 		<h2>Subscription length</h2>
