synch'ing 2.2 and head

--- a/koha-tmpl/intranet-tmpl/default/en/includes/marc-editor.css
+++ b/koha-tmpl/intranet-tmpl/default/en/includes/marc-editor.css
@@ -43,9 +43,8 @@ div.tab {
 .MARCtag { /* style for tag definition (700 - Statement of responsability) */
 	font-weight:bold;
 	color:#ad11ad;
-	background-color:FFFFFF;
+	background-color:#E8E0F1;
 	background-image:url('');
-	border-bottom: thin solid #ad11ad;
 	margin-right:30%;
 }
 
@@ -54,4 +53,5 @@ div.tab {
 	width: 12em;
 	margin-left:30px;
 	display:inline;
+	color:#000000;
 }
