--- a/koha-tmpl/intranet-tmpl/default/en/members/member-quicksearch-results.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/member-quicksearch-results.tmpl
@@ -4,7 +4,7 @@
 <h1>Member Search</h1>
 
 <div class="bloc100">
-	<p><!-- TMPL_VAR Name ="numresults" --> records match you search.
+	<p class="resultcount"><!-- TMPL_VAR Name ="numresults" --> members were found.
 	 </p>
 	<table>
 		<tr>
@@ -20,7 +20,8 @@
 			<!-- TMPL_ELSE -->
 				<tr bgcolor="white">
 			<!-- /TMPL_IF -->
-				<td><!-- TMPL_VAR NAME="count" --><form action="member-search-results.pl" method="get"><input type="button" class="button" value="Choose" title="Choose this Patron" onclick="window.opener.FillForm('<!-- TMPL_VAR NAME="cardnumber" -->','request','member'); return false;" /></form></td>
+				<td><!-- TMPL_VAR NAME="count" -->
+<form action="member-search-results.pl" method="get"><input type="button" class="button" value="Choose" title="Choose this Patron" onclick="window.opener.FillForm('<!-- TMPL_VAR NAME="cardnumber" -->','request','member'); return false;" /></form></td>
 				<td><!-- TMPL_VAR NAME="cardnumber" --></td>
 				<td><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" --></a></td>
 				<td><!-- TMPL_VAR NAME="firstname" --></a></td>
