--- a/koha-tmpl/intranet-tmpl/default/en/parameters/marctagstructure.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/marctagstructure.tmpl
@@ -65,7 +65,12 @@
 	<form action="<!-- TMPL_VAR NAME="script_name" -->" name="Aform" method="post">
 		<input type="hidden" name="op" value="add_validate">
 		<input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->">
-		<p><label>Tag<label><!-- TMPL_VAR NAME="searchfield" --></p>
+		<p><label>Tag<label><!-- TMPL_IF Name="searchfield" -->
+		<!-- TMPL_VAR NAME="searchfield" -->
+		<!-- TMPL_ELSE -->
+		<input type="text" name="tagfield" value="" escape=HTML -->
+		<!-- /TMPL_IF -->
+		</p>
 		<p><label>Lib for librarians</label><input type="text" name="liblibrarian" value="<!-- TMPL_VAR NAME="liblibrarian" escape=HTML -->" size="80" maxlength="100"></p>
 		<p><label>Lib for opac</label><input type="text" name="libopac" value="<!-- TMPL_VAR NAME="libopac" escape=HTML -->" size="80" maxlength="100"></p>
 		<p><label>Repeatable</label><!-- TMPL_VAR NAME="repeatable" --></p>
@@ -124,8 +129,11 @@
 		</select>
 		<input type="text" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->">
 		<input type="submit" value="OK" class="button">
-		<p>
-		<i>Display only used Tags/Subfields</i> <input type="checkbox" name="select_display" value="True" <!-- TMPL_IF Name="select_display"-->checked<!--/TMPL_IF -->  OnChange="javascript:document.f.submit()">
+		<p><!-- TMPL_IF Name="select_display"-->
+				<i>Display only used Tags/Subfields</i> <input type="checkbox" name="select_display" value="True" checked OnChange="javascript:document.f.submit()">
+			<!-- TMPL_ELSE -->
+				<i>Display only used Tags/Subfields</i> <input type="checkbox" name="select_display" value="True" OnChange="javascript:document.f.submit()">
+			<!--/TMPL_IF --> 
 		</p>
 	</form>
 	<b>NOTE : if you change the link between a MARC subfield and a non-MARC field, ask your administrator to run misc/rebuildnonmarc.pl script.</b>
