synch'ing 2.2 and head

--- a/koha-tmpl/opac-tmpl/css/en/opac-MARCdetail.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-MARCdetail.tmpl
@@ -76,7 +76,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -100,7 +100,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -124,7 +124,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -148,7 +148,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -172,7 +172,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -196,7 +196,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -220,7 +220,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -244,7 +244,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -268,7 +268,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
@@ -292,7 +292,7 @@
 					</label>
 					<!-- TMPL_VAR name="marc_value" -->
 					<!-- TMPL_IF name="link" -->
-						<a href="search.marc/search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
+						<a href="opac-search.pl?op=do_search&amp;marclist=<!-- TMPL_VAR NAME="link" -->&amp;operator==&amp;type=intranet&amp;value=<!-- TMPL_VAR NAME="marc_value" ESCAPE=URL -->">
 							<img border="0" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/<!-- TMPL_VAR NAME="lang" -->/images/filefind.png" height="15" title="Search on <!-- TMPL_VAR name="marc_value" -->">
 						</a>
 					<!-- /TMPL_IF -->
