--- a/koha-tmpl/opac-tmpl/css/en/opac-main.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-main.tmpl
@@ -63,8 +63,9 @@
 			<a href="opac-suggestions.pl" class="button">View & manage suggestions</a>
 		<!-- /TMPL_IF -->
 		<a href="/cgi-bin/koha/opac-user.pl" class="button">
-			<!-- TMPL_VAR NAME="loggedinusername" --> home
+			My personnal details
 		</a>
+		<a href="/cgi-bin/koha/opac-readingrecord.pl" class="button">My reading history</a>
 		
 		<a href="/cgi-bin/koha/opac-main.pl?logout.x=1" class="button">
 			Log Out
