--- a/koha-tmpl/intranet-tmpl/default/en/bull/subscription-detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/bull/subscription-detail.tmpl
@@ -1,11 +1,14 @@
 <!-- TMPL_INCLUDE NAME="bull-top.inc" -->
 <!--------------------------MAIN BODY OF PAGE-------------------------->
 <div id="mainbloc">
-<h1 class="bull">Subscription</h1>
+<h1 class="bull">Subscription for <!-- TMPL_VAR name="bibliotitle" --></h1>
 <a href="subscription-add.pl?op=mod&subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button bull" title="Modify subscription">Edit</a>
 <a href="statecollection.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button bull" title="Recieve issues">Receive</a>
 <a href="serial-issues.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button bull" title="All issues on this title">Issue history</a>
 <a href="/cgi-bin/koha/bull-home.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button bull" title="all subscriptions on <!-- TMPL_VAR name="bibliotitle" -->">Subscriptions</a>
+<!-- TMPL_IF name="letter" -->
+	<a href="viewalerts.pl?subscriptionid=<!-- TMPL_VAR name="subscriptionid" -->" class="button bull">Alerted borrowers</a>
+<!-- /TMPL_IF -->
 <a href="/cgi-bin/koha/MARCdetail.pl?bib=<!-- TMPL_VAR name="biblionumber" -->" class="button bull" title="go to <!-- TMPL_VAR name="bibliotitle" -->">Back to biblio</a>
 <!-- TMPL_UNLESS name="totalissues" -->
 		<a href="javascript:confirm_deletion()" class="button bull">
@@ -21,6 +24,13 @@
 		<p><label>Budget </label><!-- TMPL_VAR name="bookfundid" --></p>
 		<p><label>Biblio</label><i>(<!-- TMPL_VAR name="biblionumber" -->)</i> <!-- TMPL_VAR name="bibliotitle" --></p>
 		<p><label>Notes:</label><!-- TMPL_VAR name="notes" --></p>
+		<p>
+			<!-- TMPL_IF name="letter" -->
+				<label class="label100">Issue alert with letter:</label><!-- TMPL_VAR name="letter" -->
+			<!-- TMPL_ELSE -->
+				<label class="label100">Borrowers can't subscribe to issue alerts</label>
+			<!-- /TMPL_IF -->
+		</p>
 </div>
 <div id="bloc25">
 	<h2 class="bull">Planning</h2>
