removing NEW text, it was for testing purposes.

--- a/koha-tmpl/intranet-tmpl/default/en/parameters/branches.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/branches.tmpl
@@ -92,22 +92,22 @@
 	
 		<font color="red">
 		<!-- TMPL_IF name="MESSAGE1" -->
-			NEW Cannot change branch record: You must specify a Branchname and a Branchcode
+			Cannot change branch record: You must specify a Branchname and a Branchcode
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="MESSAGE2" -->
-			NEW Branch record changed
+			Branch record changed
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="MESSAGE3" -->
-			NEW Branch record deleted
+			Branch record deleted
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="MESSAGE4" -->
-			NEW Cannot change branch record: You must specify a Branchname and a Branchcode
+			Cannot change branch record: You must specify a Branchname and a Branchcode
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="MESSAGE5" -->
-			NEW Category record changed
+			Category record changed
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="MESSAGE6" -->
-			NEW The category has been deleted
+			The category has been deleted
 		<!-- /TMPL_IF -->
 		<!-- TMPL_IF name="MESSAGE7" -->
 			Branch cannot be deleted because there are items using that branch
